Change AuthEmployee View

--- a/hr_management/Views/AuthEmployee/Create.cshtml
+++ b/hr_management/Views/AuthEmployee/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
+    Layout = null;
 }
 
 <h2>Add Staff Details</h2>
@@ -70,9 +71,7 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
