--- a/hr_management/Views/AuthEmployee/Details.cshtml
+++ b/hr_management/Views/AuthEmployee/Details.cshtml
@@ -61,5 +61,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.AuthEmployeeId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Initial")
 </p>
