--- a/hr_management/Views/AuthEmployee/Index.cshtml
+++ b/hr_management/Views/AuthEmployee/Index.cshtml
@@ -2,13 +2,12 @@
 
 @{
     ViewBag.Title = "Index";
+    Layout = null;
 }
 
 <h2>Staff Details</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <table class="table">
     <tr>
         <th>
