--- a/hr_management/Views/AuthEmployee/Delete.cshtml
+++ b/hr_management/Views/AuthEmployee/Delete.cshtml
@@ -65,7 +65,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "Initial")
         </div>
     }
 </div>
