--- a/hr_management/Views/AuthEmployee/Edit.cshtml
+++ b/hr_management/Views/AuthEmployee/Edit.cshtml
@@ -73,7 +73,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Initial")
 </div>
 
 @section Scripts {
