--- a/hr_management/Views/Shared/_Layout.cshtml
+++ b/hr_management/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Staff Details", "Index", "AuthEmployee")</li>
+                    <li>@Html.ActionLink("Staff Details", "Initial", "AuthEmployee")</li>
                     <li>@Html.ActionLink("Site Details", "getSites", "Site")</li>
                     <li>@Html.ActionLink("Supplier Details", "getSuppliers", "Supplier")</li>
                     <li>@Html.ActionLink("Site Item Quantity Details", "getQuantities", "SiteItemQuantity")</li>
