Slight changes to site and policy views

--- a/hr_management/Views/Policy/UpdatePolicy.cshtml
+++ b/hr_management/Views/Policy/UpdatePolicy.cshtml
@@ -33,7 +33,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "ViewPolicies")
+    @Html.ActionLink("Back to List", "Initial")
 </div>
 
 @section Scripts {
