--- a/hr_management/Views/Policy/ViewPolicies.cshtml
+++ b/hr_management/Views/Policy/ViewPolicies.cshtml
@@ -2,13 +2,12 @@
 
 @{
     ViewBag.Title = "ViewPolicies";
+    Layout = null;
 }
 
 <h2>Policies</h2>
 
-<p>
-    @Html.ActionLink("Create New", "CreatePolicy")
-</p>
+
 <table class="table">
     <tr>
         <th>
