--- a/hr_management/Views/Policy/ViewPolicy.cshtml
+++ b/hr_management/Views/Policy/ViewPolicy.cshtml
@@ -21,5 +21,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "UpdatePolicy", new { id = Model.PolicyId }) |
-    @Html.ActionLink("Back to List", "ViewPolicies")
+    @Html.ActionLink("Back to List", "Initial")
 </p>
