--- a/hr_management/Views/Shared/_Layout.cshtml
+++ b/hr_management/Views/Shared/_Layout.cshtml
@@ -22,11 +22,11 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Staff Details", "Initial", "AuthEmployee")</li>
-                    <li>@Html.ActionLink("Site Details", "getSites", "Site")</li>
+                    <li>@Html.ActionLink("Site Details", "Initial", "Site")</li>
                     <li>@Html.ActionLink("Supplier Details", "getSuppliers", "Supplier")</li>
                     <li>@Html.ActionLink("Site Item Quantity Details", "getQuantities", "SiteItemQuantity")</li>
                     <li>@Html.ActionLink("Item Details", "getItems", "Item")</li>
-                    <li>@Html.ActionLink("Policy Details", "ViewPolicies", "Policy")</li>
+                    <li>@Html.ActionLink("Policy Details", "Initial", "Policy")</li>
                     <li>@Html.ActionLink("Supplier Item Price Details", "ViewPrices", "SupplierItemPrice")</li>
 
                 </ul>
