--- a/hr_management/Views/Site/AddSites.cshtml
+++ b/hr_management/Views/Site/AddSites.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "AddSites";
+    Layout = null;
 }
 
 <h2>Add Site Details</h2>
@@ -55,7 +56,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "getSites")
+    @Html.ActionLink("Back to List", "Initial")
 </div>
 
 @section Scripts {
