--- a/hr_management/Views/Site/UpdateSite.cshtml
+++ b/hr_management/Views/Site/UpdateSite.cshtml
@@ -57,7 +57,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "getSites")
+    @Html.ActionLink("Back to List", "Initial")
 </div>
 
 @section Scripts {
