--- a/hr_management/Views/Site/getSiteDetails.cshtml
+++ b/hr_management/Views/Site/getSiteDetails.cshtml
@@ -45,5 +45,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.SiteId }) |
-    @Html.ActionLink("Back to List", "getSites")
+    @Html.ActionLink("Back to List", "Initial")
 </p>
