--- a/hr_management/Views/Site/getSites.cshtml
+++ b/hr_management/Views/Site/getSites.cshtml
@@ -2,13 +2,12 @@
 
 @{
     ViewBag.Title = "getSites";
+    Layout = null;
 }
 
 <h2>Sites Details</h2>
 
-<p>
-    @Html.ActionLink("Create New", "AddSites")
-</p>
+
 <table class="table">
     <tr>
         <th>
