--- a/hr_management/Views/Policy/CreatePolicy.cshtml
+++ b/hr_management/Views/Policy/CreatePolicy.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "CreatePolicy";
+    Layout = null;
 }
 
 <h2>Create Policy</h2>
@@ -31,7 +32,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "ViewPolicies")
+    @Html.ActionLink("Back to List", "Initial")
 </div>
 
 @section Scripts {
