--- a/hr_management/Views/Policy/DeletePolicy.cshtml
+++ b/hr_management/Views/Policy/DeletePolicy.cshtml
@@ -24,7 +24,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "ViewPolicies")
+            @Html.ActionLink("Back to List", "Initial")
         </div>
     }
 </div>
