--- a/hr_management/Views/Site/DeleteSite.cshtml
+++ b/hr_management/Views/Site/DeleteSite.cshtml
@@ -49,7 +49,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "getSites")
+            @Html.ActionLink("Back to List", "Initial")
         </div>
     }
 </div>
