--- a/hr_management/Views/GoodReceipt/getReceipts.cshtml
+++ b/hr_management/Views/GoodReceipt/getReceipts.cshtml
@@ -35,7 +35,7 @@
         </td>
         <td>
            
-            @Html.ActionLink("Details", "Initial", new { id=item.GoodReceiptId }) 
+            @Html.ActionLink("Details", "getDetails", new { id=item.GoodReceiptId }) 
            
         </td>
     </tr>
