Add Test cases to AuthEmployee controller

--- a/hr_management/Views/Home/Index.cshtml
+++ b/hr_management/Views/Home/Index.cshtml
@@ -1,7 +1,19 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<style>
+.text{
+ text-align: center;
+ font-family:'Cambria Math';
+}
+</style>
 
-<div>
+<div class="text">
     <h1>Welcome to our Procurement Department........</h1>
+    
+</div>
+<div>
+    <img src="~/AppFile/Images/images.jpg" margin="10px" width="1200" height="500" />
+
+
 </div>
