--- a/hr_management/Views/Account/Login.cshtml
+++ b/hr_management/Views/Account/Login.cshtml
@@ -5,6 +5,10 @@
 }
 
 <h2>@ViewBag.Title.</h2>
+<link href="//maxcdn.bootstrapcdn.com/bootsrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css"/>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<link href="~/Content/Login.css" rel="stylesheet" id="Login-css" />
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
