--- a/hr_management/Views/ConstructorRequest/getConRequest.cshtml
+++ b/hr_management/Views/ConstructorRequest/getConRequest.cshtml
@@ -7,62 +7,68 @@
 
 
 
+<div class="col-md-6">
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ReqId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ItemName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Qty)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Unit)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Date)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SiteStatus)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Immidiate)
+            </th>
+            <th></th>
+        </tr>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ReqId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ItemName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Qty)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Unit)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Date)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SiteStatus)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Immidiate)
-        </th>
-        <th></th>
-    </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ReqId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ItemName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Qty)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Unit)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Date)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SiteStatus)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Immidiate)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "UpdateRequest", new { id = item.ConstructorRequestId }) |
+                    @Html.ActionLink("Details", "getRequestDetails", new { id = item.ConstructorRequestId }) |
+                    @Html.ActionLink("Delete", "DeleteRequest", new { id = item.ConstructorRequestId })
+                </td>
+            </tr>
+        }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ReqId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ItemName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Qty)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Unit)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Date)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SiteStatus)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Immidiate)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "UpdateRequest", new { id=item.ConstructorRequestId }) |
-            @Html.ActionLink("Details", "getRequestDetails", new { id=item.ConstructorRequestId }) |
-            @Html.ActionLink("Delete", "DeleteRequest", new { id=item.ConstructorRequestId })
-        </td>
-    </tr>
-}
+    </table>
 
-</table>
+</div>
+<div class="col-md-6">
+    <img src="~/AppFile/Images/constructor.jpg" width="400" height="400" />
+</div>
