--- a/hr_management/Views/PurchaseOrder/AddOrder.cshtml
+++ b/hr_management/Views/PurchaseOrder/AddOrder.cshtml
@@ -18,6 +18,7 @@
             @Html.LabelFor(model => model.OrderId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.OrderId, new { htmlAttributes = new { @class = "form-control" } })
+                @*Validations Message*@
                 @Html.ValidationMessageFor(model => model.OrderId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -63,5 +64,6 @@
 }
 
 <div>
+    @*Return back to List*@
     @Html.ActionLink("Back to List", "Initial")
 </div>
