--- a/hr_management/Views/PurchaseOrder/AddOrder.cshtml
+++ b/hr_management/Views/PurchaseOrder/AddOrder.cshtml
@@ -36,6 +36,7 @@
             @Html.LabelFor(model => model.OrderDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.OrderDate, new { htmlAttributes = new { @class = "form-control" } })
+                @*validations message*@
                 @Html.ValidationMessageFor(model => model.OrderDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -44,6 +45,7 @@
             @Html.LabelFor(model => model.IsDraftPurchaseOrder, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.IsDraftPurchaseOrder, new { htmlAttributes = new { @class = "form-control" } })
+                @*validations message*@
                 @Html.ValidationMessageFor(model => model.IsDraftPurchaseOrder, "", new { @class = "text-danger" })
             </div>
         </div>
