--- a/hr_management/Views/PurchaseOrder/DeleteOrder.cshtml
+++ b/hr_management/Views/PurchaseOrder/DeleteOrder.cshtml
@@ -14,6 +14,7 @@
 
     <dl class="dl-horizontal">
         <dt>
+            @*order id*@
             @Html.DisplayNameFor(model => model.OrderId)
         </dt>
 
@@ -26,6 +27,7 @@
         </dt>
 
         <dd>
+            @*statsus*@
             @Html.DisplayFor(model => model.OrderStatus)
         </dd>
 
