--- a/hr_management/Views/PurchaseOrderItems/AddPurchaseItem.cshtml
+++ b/hr_management/Views/PurchaseOrderItems/AddPurchaseItem.cshtml
@@ -46,7 +46,7 @@
             @Html.LabelFor(model => model.ItemName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ItemName, new { htmlAttributes = new { @class = "form-control" } })
-                @*validation message*@
+                @*validations message*@
                 @Html.ValidationMessageFor(model => model.ItemName, "", new { @class = "text-danger" })
             </div>
         </div>
