change suppliyItem vview

--- a/hr_management/Views/SupplierItemPrice/getSupItemPrices.cshtml
+++ b/hr_management/Views/SupplierItemPrice/getSupItemPrices.cshtml
@@ -21,7 +21,7 @@
             </th>
             <th></th>
         </tr>
-
+//add image here
         @foreach (var item in Model) {
             <tr>
                 <td>
